# diesel_load_extension

./: Cargo.toml  Cross.toml  README.md
.githooks/: pre-commit
.github/cross-images/aarch64-unknown-linux-musl-system-sqlite/: Dockerfile
.github/cross-images/armv7-unknown-linux-gnueabihf-system-sqlite/: Dockerfile
.github/cross-images/x86_64-unknown-linux-musl-system-sqlite/: Dockerfile
.github/workflows/: ci.yml
src/: errors.rs  ffi.rs  lib.rs
tests/: integration.rs
tests/fixtures/: smoke_extension.c
wasm-tests/: Cargo.toml
wasm-tests/src/: lib.rs
