[package]
name = "diesel_load_extension"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
authors = ["Luca Cappelletti <cappelletti.luca94@gmail.com>"]
description = "Diesel extension for SQLite load_extension support"
license = "MIT"
repository = "https://github.com/LucaCappelletti94/diesel_load_extension"
readme = "README.md"
publish = false
keywords = ["diesel", "sqlite", "extension", "load-extension"]
categories = ["database"]


[features]
default = ["std", "sqlite-bundled"]
std = ["diesel/std", "thiserror/std"]
sqlite-bundled = ["libsqlite3-sys/bundled"]

[dependencies]
diesel = { version = "2.3.6", git = "https://github.com/diesel-rs/diesel", branch = "main", default-features = false, features = ["sqlite-no-std"] }
thiserror = { version = "2", default-features = false }
libsqlite3-sys = { version = "0.31" }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "warn"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
